# spacetraders_cli

./: .gitignore  example.py  pyproject.toml
spacetraders_api/: exceptions.py  models.py  rest_adapter.py  spacetraders_api.py
